<resources>
    <string name="app_name">Hangman</string>
    <string name="action_settings">Settings</string>
    <string name="hangman_text">Hangman</string>
    <string name="play_game">Spela!</string>
    <string name="about_button">Om</string>
    <string name="about_text">Appen skapad av Scott Crocker, 2016.</string>
    <string name="toolbar_menu_text">Huvudmeny</string>
    <string name="about_title">Om appen</string>
    <string name="result_text">Resultat</string>
    <string name="result_won_text">Du vann!</string>
    <string name="result_lost_text">Du förlorade&#8230;</string>
    <string name="word_was">Ordet var:</string>
    <string name="result_tries_remain">Antal försök kvar:</string>
    <string name="back_to_menu_button">Tillbaka till huvudmenyn</string>
    <string name="guess_button">Gissa!</string>
    <string name="secret_word">WORD</string>
    <string name="tries_left_text">10 försök kvar</string>
    <string name="guessed_letters_text"></string>
    <string name="result_title">Spelresultat</string>
    <string name="play_again">Spela igen</string>
    <string name="tries_left">försök kvar.</string>
    <string name="only_letters_allowed">Du får endast använda bokstäver!</string>
    <string name="already_guessed_letter">Du har redan gissat på denna bokstav!</string>
</resources>
