<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scottcrocker.hangman.ResultActivity">

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/result_word_was"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_text"
        android:text="@string/word_was"/>

    <TextView
        android:id="@+id/result_tries_remain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_word_was"
        android:layout_marginBottom="20dp"
        android:text="@string/result_tries_remain"/>

    <Button
        android:id="@+id/play_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_tries_remain"
        android:text="@string/play_again"
        android:textAllCaps="false"
        android:onClick="playAgain"/>

    <Button
        android:id="@+id/result_back_to_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_again"
        android:text="@string/back_to_menu_button"
        android:textAllCaps="false"
        android:onClick="backToMenu"/>

</RelativeLayout>
