<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.scottcrocker.hangman.MenuActivity"
    tools:showIn="@layout/activity_menu">

    <TextView
        android:id="@+id/hangman_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/hangman_text"
        android:textSize="35sp"/>

    <Button
        android:id="@+id/play_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hangman_text"
        android:text="@string/play_game"
        android:textAllCaps="false"
        android:onClick="playGame"/>

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_game_button"
        android:text="@string/about_button"
        android:textAllCaps="false"
        android:onClick="aboutInfo"/>
</RelativeLayout>
