<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scottcrocker.hangman.GameActivity">

        <ImageView
            android:id="@+id/hangman_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/hang10"/>

        <TextView
            android:id="@+id/secret_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/hangman_image"
            android:text="@string/secret_word"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/tries_left_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/secret_word"
            android:text="@string/tries_left_text"/>

        <TextView
            android:id="@+id/guessed_letters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tries_left_text"
            android:text="@string/guessed_letters_text"/>

        <EditText
            android:id="@+id/guess_text"
            android:inputType="textCapCharacters"
            android:maxLength="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/guess_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/guess_button"
            android:textAllCaps="false"
            android:onClick="guessLetter"/>

</RelativeLayout>
